--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           npm i
           npm run build --prod
       - name: Push Build to Releases
-        uses: ncipollo/release-action@v1
+        uses: actions/create-release@v1
         with:
           artifacts: "dist/angular-githubaction/*"
           token: ${{ secrets.TESTTOKEN }}
